--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -12,11 +12,10 @@
   min-width: 80%;
   border-radius: 5px;
   overflow: hidden;
-  box-shadow: 0 0 20px rgba(248, 248, 248, 0.336);
 }
 
 .content-table thead tr {
-  background-color: #6239eb;
+  background-color: #2D8AE0;
   color: #ffffff;
   text-align: center;
   font-weight: bold;
@@ -41,7 +40,7 @@
 .border-color-quantity {
   width: 100%;
   color: black;
-  background-color: #30323453;
+  background-color: #2d89e0d2;
   padding: 8px 12px;
   margin: 8px 0;
   box-sizing: border-box;
