--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -5,29 +5,27 @@
   }
   
   .dropdown .arrow {
-    border-color: #999 transparent transparent;
+    border-color: #2D8AE0 transparent transparent;
     border-style: solid;
-    border-width: 5px 5px 0;
-    content: " ";
+    border-width: 8px 8px 0;
     display: block;
-    height: 0;
-    margin-top: 0.3rem;
+    margin-top: 0.2rem;
     position: absolute;
     right: 10px;
     top: 14px;
-    width: 0;
   }
   
   .dropdown .arrow.open {
-    border-color: transparent transparent #999;
-    border-width: 0 5px 5px;
+    border-color: transparent transparent #2D8AE0;
+    border-width: 0 8px 10px;
+    margin-top: 0.2rem;
   }
   
-  .dropdown .selected-value {
+  .dropdown .selected-value input {
     line-height: 1.5;
     font-size: 1rem;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 2px solid #303234;
     border-radius: 2px;
     box-sizing: border-box;
     cursor: default;
