--- a/src/styles/table-modal-styles.css
+++ b/src/styles/table-modal-styles.css
@@ -44,7 +44,7 @@
   .border-color-quantity {
     width: 100%;
     color: black;
-    background-color: #f36a6a;
+    background-color: #fbf9f9;
     padding: 8px 12px;
     margin: 4px 0;
     box-sizing: border-box;
