ajuste cor de modal

--- a/src/styles/table-modal-styles.css
+++ b/src/styles/table-modal-styles.css
@@ -38,7 +38,7 @@
     margin: 2px 0;
     box-sizing: border-box;
     border-radius: 4px;
-    border: 2px solid #303234;
+    border: 2px solid #30323487;
   }
   
   .border-color-quantity {
